--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.49.0",
+    "nodemailer": "^6.9.15",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
